sculpt mode, texture overlay dances around #102312

Closed
opened 2022-11-06 22:41:34 +01:00 by Nahuel Belich · 9 comments

System Information
Operating system: Linux-5.15.0-52-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.103.01

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-30 04:56, hash: 9bd38750b3
Worked: (newest version of Blender that worked as expected)

Short description of error
if the texture mask its set to "view plane" and the stroke is "anchored" the texture overlay dances around the circumference of the stroke

Exact steps for others to reproduce the error
1-Open the file
2-click and hold
3-move the cursor around
viewplane bug.blend
test1.mp4

**System Information** Operating system: Linux-5.15.0-52-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.103.01 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-30 04:56, hash: `9bd38750b3` Worked: (newest version of Blender that worked as expected) **Short description of error** if the texture mask its set to "view plane" and the stroke is "anchored" the texture overlay dances around the circumference of the stroke **Exact steps for others to reproduce the error** 1-Open the file 2-click and hold 3-move the cursor around [viewplane bug.blend](https://archive.blender.org/developer/F13862367/viewplane_bug.blend) [test1.mp4](https://archive.blender.org/developer/F13862363/test1.mp4)
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2022-11-08 12:05:10 +01:00
Member

Think I got a fix

Think I got a fix

This issue was referenced by 4db3ae2c52

This issue was referenced by 4db3ae2c522e85970ed703242eba106067239ae1

This issue was referenced by 7a21a49ac5

This issue was referenced by 7a21a49ac531b4181e1ed8c24d409f4296b1f5f6

This issue was referenced by 09faf8a449

This issue was referenced by 09faf8a449e36ce044141e67e792f3d02dd1602d
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102312
No description provided.